<resources>
    <string name="app_name">Q-Count Pilwali 2020</string>
    <string name="app_name_secondary">APLIKASI PENGHITUNGAN SUARA CEPAT\nPILKADA KOTA BLITAR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="beranda">Beranda</string>
    <string name="profil">Profil</string>
    <string name="refresh">Refresh Lokasi</string>

    <string name="title_beranda">Beranda</string>
    <string name="title_detail_tps">Detail TPS</string>
    <string name="title_pilwali">Perhitungan</string>
    <string name="title_monitoring_perhitungan">Monitoring Perhitungan</string>
    <string name="edit_account">Edit Profil</string>
    <string name="perolehan_suara">Perolehan Suara</string>

    <string name="jumlah_dpt">Jumlah DPT</string>
    <string name="jumlah_dptb">Jumlah DPTb</string>
    <string name="jumlah_dph">Jumlah DPPh</string>
    <string name="jumlah_dpk">Jumlah DPK</string>
    <string name="jumlah_difabel">Jumlah Difabel</string>
    <string name="jumlah_pemilih">Jumlah Pemilih</string>
    <string name="suara_tidak_sah">Suara Tidak Sah</string>

    <string name="pilwali">Perhitungan</string>
    <string name="tps">TPS</string>
    <string name="monitoring">Monitoring</string>
    <string name="blangko">C1 Plano</string>
    <string name="login_to_next">Masuk untuk melanjutkan</string>
    <string name="rincian_daftar_pemilih">Rincian Daftar Pemilih</string>

    <string name="pesan">pesan</string>
    <string name="sorry">Mohon maaf</string>
    <string name="message_developement">Masih dalam tahap pengembangan!</string>
    <string name="message_gps_dialog">Mohon hidupkan GPS di smartphone anda</string>
    <string name="message_not_upload_image">Anda belum mengunggah foto</string>
    <string name="please_wait">Tunggu Sebentar...</string>
    <string name="download_description">Sedang download file...</string>
    <string name="title_download">Download C1 Plano</string>
    <string name="success_login">Anda Berhasil Login</string>
    <string name="confirm_logout">Konfirmasi keluar</string>
    <string name="question_logout">Anda yakin keluar?</string>
    <string name="username_password_must_not_be_null">Username dan Password harus diisi!</string>
    <string name="verification">Sudah diverifikasi</string>
    <string name="not_verification">Belum diverifikasi</string>
    <string name="form_is_required">Form tidak boleh kosong</string>
    <string name="notif_perhitungan">Data TPS harus diisi sebelum mengisi perhitungan</string>
    <string name="server_error">Ada Gangguan di Server Kami</string>

    <string name="keluar">Keluar</string>
    <string name="cancel">Cancel</string>
    <string name="simpan">Simpan</string>
    <string name="close">Tutup</string>
    <string name="yes">Iya</string>
    <string name="no">Tidak</string>
    <string name="actived_gps_location">Hidupkan GPS</string>

    <string name="foto_tps">Foto TPS</string>
    <string name="upload_blangko">Unggah Foto C1 Plano</string>
    <string name="menu_utama">Menu Utama</string>
    <string name="detail_tps_address">TPS %1$s - %2$s -%3$s</string>
    <string name="status_verfication">Verifikasi</string>
    <string name="app_versions">App Version - %s</string>
    <string name="copyright">Aplikasi Penghitungan Suara Cepat Pilkada Kota Blitar ~ Copyright ©2020</string>

    <string name="title">Title</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="galery">Galery</string>
    <string name="camera">Kamera</string>
    <string name="choose">Pilih</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_gallery">Choose from Gallery</string>
    <string name="jumlah_tidak_sah">Jumlah Tidak Sah</string>
    <string name="pemilih_tidak_hadir">Pemilih Tidak Hadir</string>
    <string name="nama_paslon">Nama Paslon</string>
    <string name="suara_tidak_hadir">Suara Tidak Hadir</string>
    <string name="simple_message">simple message</string>

    <string-array name="choose_image">
        <item>Take Photo</item>
        <item>Choose from Gallery</item>
    </string-array>
</resources>