<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.fragments.OpenDialogFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/title_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="@string/pesan" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle"
            android:textAllCaps="false"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_keluar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_custom"
            android:textColor="@color/colorWhite"
            android:text="@string/keluar" />
    </LinearLayout>

</LinearLayout>