<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    tools:context=".ui.fragments.BerandaFragment"
    tools:ignore="NamespaceTypo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/section1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFF">

            <!-- SECTION FIRST -->
            <RelativeLayout
                android:id="@+id/section_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:paddingTop="16dp"
                android:paddingBottom="24dp">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/banner_viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:paddingHorizontal="16dp"/>

                <com.viewpagerindicator.CirclePageIndicator
                    android:id="@+id/indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    app:centered="false"
                    app:snap="false"
                    android:layout_below="@id/banner_viewPager"
                    app:pageColor="#999999"
                    app:fillColor="@color/colorPrimary"
                    android:padding="10dip"/>

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_image_slider_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentTop="true"
                    shimmer:duration="800"
                    android:layout_marginHorizontal="16dp"
                    android:visibility="gone">

                    <include
                        android:id="@+id/shimmer_latlong"
                        layout="@layout/shimmer_image_slider"/>

                </com.facebook.shimmer.ShimmerFrameLayout>


                <LinearLayout
                    android:id="@+id/layout_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/indicator">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jumlah_pemilih"
                        android:textColor="@color/colorPrimaryTextIcon"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/subTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TPS 0 - Kel. - Kec. -"
                        android:textSize="14sp"
                        android:layout_marginTop="8dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <include
                    android:id="@+id/jumlah_pemilih"
                    android:layout_below="@id/layout_title"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    layout="@layout/jumlah_pemilih"/>
                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/mShimmerViewContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/banner_viewPager"
                    shimmer:duration="800"
                    android:visibility="gone">

                    <include
                        android:id="@+id/shimmer_latlong"
                        layout="@layout/shimmer_jumlah_pemilih"/>

                </com.facebook.shimmer.ShimmerFrameLayout>

            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/section2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:layout_below="@id/section1"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_suara_paslon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                shimmer:duration="800"
                android:visibility="gone">

                <include
                    android:id="@+id/shimmer_latlong"
                    layout="@layout/shimmer_suara_paslon"/>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <include
                android:id="@+id/suara_paslon"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                layout="@layout/suara_paslon"/>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_suara_tidak_sah_hadir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                shimmer:duration="800"
                android:visibility="gone">

                <include
                    android:id="@+id/shimmer_latlong"
                    layout="@layout/shimmer_jumlah_tidak_sah_hadir"/>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <include
                android:id="@+id/suara_tidak_sah_hadir"
                layout="@layout/jumlah_tidak_sah_hadir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:layout_below="@id/section2"
            android:layout_marginTop="8dp"
            android:paddingBottom="120dp"
            android:paddingTop="10dp">

            <!-- MENU UTAMA -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp">

                <TextView
                    android:id="@+id/title_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_utama"
                    android:textColor="@color/colorPrimaryTextIcon"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/title_menu"
                    android:layout_marginTop="12dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/btn_tps"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:padding="15dp"
                            android:background="@drawable/button_stroke"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_tps"
                            android:layout_gravity="center_horizontal"
                            android:foreground="?android:attr/selectableItemBackground"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tps"
                            android:layout_marginTop="8dp"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimaryTextIcon"
                            android:gravity="center_horizontal"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/btn_pilwali"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:padding="20dp"
                            android:background="@drawable/button_stroke"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_vote"
                            android:layout_gravity="center_horizontal"
                            android:foreground="?android:attr/selectableItemBackground"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pilwali"
                            android:layout_marginTop="8dp"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimaryTextIcon"
                            android:gravity="center_horizontal"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_button_monitoring"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/btn_monitor"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:padding="20dp"
                            android:background="@drawable/button_stroke"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_monitoring"
                            android:layout_gravity="center_horizontal"
                            android:foreground="?android:attr/selectableItemBackground"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:gravity="center_horizontal"
                            android:text="@string/monitoring"
                            android:textColor="@color/colorPrimaryTextIcon"
                            android:textSize="16sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/btn_blangko"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:padding="20dp"
                            android:background="@drawable/button_stroke"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_file"
                            android:layout_gravity="center_horizontal"
                            android:foreground="?android:attr/selectableItemBackground"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/blangko"
                            android:layout_marginTop="8dp"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimaryTextIcon"
                            android:gravity="center_horizontal"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>



</ScrollView>