<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.PilwaliActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_daftar_pemilih"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rincian Daftar Pemilih"
                    android:textColor="@color/colorPrimaryTextIcon"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    android:layout_marginHorizontal="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/jumlah_dpt"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/in_jumlah_dpt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/jumlah_dpt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:maxLines="1"
                            android:inputType="number"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    android:layout_marginHorizontal="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/jumlah_dptb"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/in_jumlah_dptb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/jumlah_dptb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:maxLines="1"
                            android:inputType="number"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    android:layout_marginHorizontal="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/jumlah_dpk"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/in_jumlah_dpk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/jumlah_dpk"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:maxLines="1"
                            android:inputType="number"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    android:layout_marginHorizontal="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/jumlah_dph"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/in_jumlah_dph"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/jumlah_dph"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:maxLines="1"
                            android:inputType="number"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


                <Button
                    android:id="@+id/btn_simpan"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="18dp"
                    android:background="@color/colorPrimaryDark"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/simpan"
                    android:textColor="@color/colorTextIcon" />


            </LinearLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/mShimmerViewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                shimmer:duration="800"
                android:visibility="gone">
                <include
                    layout="@layout/shimmer_pilwali"/>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_below="@id/layout_daftar_pemilih"
                android:layout_marginVertical="20dp"
                android:background="@color/colorWhite" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="80dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="STATUS"
                        android:textColor="@color/colorPrimaryTextIcon"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ic_verifikasi"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_unverification" />

                    <TextView
                        android:id="@+id/tv_verifikasi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center_horizontal"
                        android:text="Belum Diverifikasi!"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:clickable="true"
        android:src="@drawable/ic_arrow_next" />
</RelativeLayout>
